@@ -1,11 +1,11 @@
 #!/bin/bash
 
-JAR_FILE=/app/study-springcloud-eureka-1.0.jar
-LOG_FILE=/app/stdout.log
+JAR_FILE=/app/study-springcloud-eureka/study-springcloud-eureka-1.0.jar
+LOG_FILE=/app/study-springcloud-eureka/stdout.log
 
-JAVA_MEM_OPTS=" -server -Xms512M -Xmx512M -Xmn128M -Xss128M -XX:PermSize=128M -XX:MaxPermSize=512M"
+JAVA_MEM_OPTS=" -server -Xms512M -Xmx512M -Xmn128M -Xss128M -XX:MetaspaceSize=128M -XX:MaxMetaspaceSize=512M"
 JAVA_GC_OPTS=" -XX:+PrintGC -XX:PrintGCDetails -XX:PrintGCTime"
-JAVA_OPTS=$JAVA_MEM_OPTS
+JAVA_OPTS=$JAVA_MEM_OPTS $JAVA_GC_OPTS
 #
 #export JAVA_HOME
 #export PATH=$PATH:$JAVA_HOME/bin
